[gd_scene load_steps=20 format=3 uid="uid://c1g7hdm4cra1a"]

[ext_resource type="Script" uid="uid://dclt82y1xuy5v" path="res://scene/mainmenu/main.gd" id="1_v0l8b"]
[ext_resource type="Texture2D" uid="uid://bdskpru1v1x8j" path="res://assets/Background/1.png" id="2_7baaq"]
[ext_resource type="Texture2D" uid="uid://b4mmlocw1ln1s" path="res://assets/Background/2.png" id="3_n8t2a"]
[ext_resource type="Texture2D" uid="uid://1cmhkwpggyyb" path="res://assets/Background/3.png" id="4_gety0"]
[ext_resource type="Texture2D" uid="uid://cy1ci2yqhmuiq" path="res://assets/Background/4.png" id="5_r4cjg"]
[ext_resource type="Texture2D" uid="uid://yvf73m4mytl4" path="res://assets/Background/5.png" id="6_qn3j6"]
[ext_resource type="Texture2D" uid="uid://cxpstvevynh7e" path="res://assets/Background/6.png" id="7_q4fsb"]
[ext_resource type="Texture2D" uid="uid://bsk6jn6ym1ps8" path="res://assets/Background/logo.png" id="8_n8t2a"]
[ext_resource type="FontFile" uid="uid://dxeabgdg81rfw" path="res://assets/font/m5x7.ttf" id="9_r4cjg"]
[ext_resource type="Texture2D" uid="uid://dxeqa0nckosqt" path="res://assets/Background/triangle.png" id="10_qn3j6"]
[ext_resource type="Texture2D" uid="uid://dbwlclf5lcr0x" path="res://assets/Background/triangle-usd.png" id="11_q4fsb"]
[ext_resource type="PackedScene" uid="uid://bq6pi2tqhqvcl" path="res://scene/music/musicmanager.tscn" id="12_q4fsb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qn3j6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gety0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4fsb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4cjg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_taulr"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bqvl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5tbsy"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_v0l8b")

[node name="bg1" type="Sprite2D" parent="."]
position = Vector2(253.2, 146.8)
scale = Vector2(0.95, 0.95)
texture = ExtResource("2_7baaq")

[node name="bg2" type="Sprite2D" parent="."]
position = Vector2(253.2, 146.8)
scale = Vector2(0.925, 0.925)
texture = ExtResource("3_n8t2a")

[node name="bg3" type="Sprite2D" parent="."]
position = Vector2(253.2, 146.8)
scale = Vector2(0.925, 0.925)
texture = ExtResource("4_gety0")

[node name="bg4" type="Sprite2D" parent="."]
position = Vector2(253.2, 146.8)
scale = Vector2(0.925, 0.925)
texture = ExtResource("5_r4cjg")

[node name="bg5" type="Sprite2D" parent="."]
position = Vector2(253.2, 146.8)
scale = Vector2(0.925, 0.925)
texture = ExtResource("6_qn3j6")

[node name="bg6" type="Sprite2D" parent="."]
position = Vector2(253.2, 146.8)
scale = Vector2(0.925, 0.925)
texture = ExtResource("7_q4fsb")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(262, 114)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_n8t2a")

[node name="UIAnchor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 221.0
offset_top = 204.0
offset_right = 276.0
offset_bottom = 244.0

[node name="ExitButton" type="Button" parent="UIAnchor"]
layout_mode = 2
offset_left = 34.0
offset_top = 22.0
offset_right = 42.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_r4cjg")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_qn3j6")
theme_override_styles/normal = SubResource("StyleBoxFlat_gety0")

[node name="PlayButton" type="Button" parent="UIAnchor"]
layout_mode = 2
offset_left = 16.0
offset_top = 5.0
offset_right = 24.0
offset_bottom = 13.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_r4cjg")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover = SubResource("StyleBoxFlat_q4fsb")
theme_override_styles/normal = SubResource("StyleBoxFlat_r4cjg")

[node name="triangle" type="Sprite2D" parent="UIAnchor"]
position = Vector2(39, 3)
scale = Vector2(0.057, 0.04)
texture = ExtResource("10_qn3j6")

[node name="triangle-usd" type="Sprite2D" parent="UIAnchor"]
position = Vector2(39, 42)
scale = Vector2(0.0569128, 0.04)
texture = ExtResource("11_q4fsb")

[node name="VsPlayerButton" type="Button" parent="UIAnchor"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_r4cjg")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_taulr")

[node name="VsAIButton" type="Button" parent="UIAnchor"]
layout_mode = 0
offset_left = -20.0
offset_right = -12.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_r4cjg")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_5bqvl")

[node name="EasyButton" type="Button" parent="UIAnchor"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_r4cjg")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_5tbsy")

[node name="HardButton" type="Button" parent="UIAnchor"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("9_r4cjg")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_5tbsy")

[node name="manager" parent="." instance=ExtResource("12_q4fsb")]

[connection signal="pressed" from="UIAnchor/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="UIAnchor/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UIAnchor/VsPlayerButton" to="." method="_on_vs_player_pressed"]
[connection signal="pressed" from="UIAnchor/VsPlayerButton" to="." method="_on_vs_player_button_pressed"]
[connection signal="pressed" from="UIAnchor/VsAIButton" to="." method="_on_vs_ai_pressed"]
[connection signal="pressed" from="UIAnchor/VsAIButton" to="." method="_on_vs_ai_button_pressed"]
